--- a/src/index.css
+++ b/src/index.css
@@ -56,12 +56,10 @@ code {
 }
 
 .navbar {
-  background-color: rgba(0, 0, 0, 0);
   display: inline-block;
-  position: fixed;
-  top: 2rem;
-  right: 2rem;
-  padding: 2rem;
+  position: absolute;
+  /* top: 2rem;
+  right: 2rem; */
   z-index: 100;
 }
 
